# learnRust

./: 300.csv  Cargo.toml  data.db
data/: 300.csv
migrations/: 20210527180613_stock_price.sql
src/: main.rs
src/calc/: ATR.rs  EMA.rs  ma.rs  mod.rs
src/data/: csvdb.rs  join_quant.rs  mod.rs  sina_source.rs  tushare.rs  utils.rs
src/service/: mod.rs
