[package]
name = "dig_money"
version = "0.1.0"
authors = ["Zack <lzcers@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
anyhow = "1.0"
regex = "1"